# axiom_pylib

./: .gitignore  README.md  pyproject.toml  setup.cfg
axiom/: I2C_Comms.py  SPI_Comms.py  __init__.py  axiom.py  u02_SystemManager.py  u07_LiveView.py
axiom_tc/: Bootloader.py  CDU_Common.py  I2C_Comms.py  SPI_Comms.py  TCP_Comms.py  USB_Comms.py  UsageRevisionBase.py  __init__.py  axiom.py  u02_SystemManager.py  u06_SelfTest.py  u06_SelfTest_rev3.py  u06_SelfTest_rev4.py  u06_SelfTest_rev5.py  u06_SelfTest_rev6.py  u06_SelfTest_rev7.py  u07_LiveView.py  u07_LiveView_Utils.py  u07_LiveView_rev10.py  u07_LiveView_rev11.py  u07_LiveView_rev12.py  u07_LiveView_rev13.py  u07_LiveView_rev14.py  u07_LiveView_rev6.py  u07_LiveView_rev7.py  u07_LiveView_rev8.py  u07_LiveView_rev9.py  u31_DeviceInformation.py  u32_DeviceCapabilities.py  u33_CRCData.py  u48_GPIOControls.py  uXX_Template.py
