[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom_tc"
version = "4.8.7.3"
description = "Python library for TouchNetix aXiom Touch Controllers"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name="Mark Satterthwaite", email="mark.satterthwaite@touchnetix.com"},
    { name="James Cameron", email="james.cameron@touchnetix.com"},
	{ name="Henry Spencer", email="henry.spencer@touchnetix.com"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://www.touchnetix.com/"
Repository = "https://github.com/TouchNetix/axiom_pylib"
