[metadata]
name = axiom
version = 0.0.1
author = Mark Satterthwaite
author_email = mark.satterthwaite@touchnetix.com
description = Python library for TouchNetix aXiom Touch Controllers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TouchNetix/axiom_pylib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True