[metadata]
name = axiom_tc
version = 4.8.0
authors = [
    { name="Mark Satterthwaite", email="mark.satterthwaite@touchnetix.com"},
    { name="James Cameron", email="james.cameron@touchnetix.com"},
    { name="Hannah Rossiter", email="hannah.rossiter@touchnetix.com"},
]
description = Python library for TouchNetix aXiom Touch Controllers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TouchNetix/axiom_pylib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[project]
homepage = "https://www.touchnetix.com/"
repository = "https://github.com/TouchNetix/axiom_pylib"
#documentation = "https://example_project.readthedocs.io"
issue-tracker = "https://github.com/TouchNetix/axiom_pylib/issues"

[options]
packages = find:
python_requires = >=3.8
include_package_data = True